ajout de la base html.twig + block body

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Series !{% endblock %}</title>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Series !{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" href="{{ asset('img/icon.png') }}">
+    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+</head>
+<body>
+<div class="container">
+<header>
+    <h1>
+        <a href="{{ path('main_home') }}">
+            <img src="{{ asset('img/logo.svg') }}" alt="Series !  | Home">
+        </a>
+    </h1>
+    {% include 'menu/nav.html.twig' %}
+</header>
+    <main>
+{% block body %}{% endblock %}
+    </main>
+<footer>
+    {% include 'menu/nav.html.twig' %}
+</footer>
+</div>
+</body>
 </html>
