--- a/templates/menu/nav.html.twig
+++ b/templates/menu/nav.html.twig
@@ -4,5 +4,6 @@
         <li><a href="{{ path('main_test') }}">Test</a></li>
         <li><a href="{{ path('serie_list') }}">Serie List</a></li>
         <li><a href="{{ path('serie_add') }}">Add a new Serie</a></li>
+        <li><a href="{{ path('season_add') }}">Season add</a></li>
     </ul>
 </nav>
