--- a/templates/serie/show.html.twig
+++ b/templates/serie/show.html.twig
@@ -13,6 +13,18 @@
             <div>Serie status : : {{ serie.firstAirDate | date('Y-m-d')  }} to {{ serie.lastAirDate | date ('Y-m-d') }}</div>
             <div>{{ serie.overview }}</div>
         </div>
+        <section class="seasons">
+<h3>Seasons</h3>
+            {%  for season in serie.seasons %}
+<article>
+    <img src="{{ asset('img/posters/seasons/'~ season.poster) }}" alt="{{ serie.name }} season {{ season.number }}">
+    <div>
+        <h4>Season #{{ season.number }}</h4>
+        <div>{{ season.overview }}</div>
+    </div>
+</article>
+            {% endfor %}
+        </section>
     </div>
 
 {% endblock %}
