--- a/templates/serie/list.html.twig
+++ b/templates/serie/list.html.twig
@@ -1,47 +1,28 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Serie's details</h2>
-    <div class="serie-details">
-        {% for serie in series %}
-        <div class="serie-poster">
-            <img src="{{ asset('img/posters/series/' ~ serie.poster ) }}" alt="{{ serie.name }}">
-        </div>
-        <div class="serie-details-infos">
-            <h2>{{ serie.name }}</h2>
-            <div>User ratings : {{ serie.vote }}</div>
-            <div>Categorized in : {{ serie.genres }}</div>
-            <div>Serie status : {{ serie.status }}</div>
-            <div>Aired from {{ serie.firstAirDate | date('Y-m-d') }} to {{ serie.lastAirDate | date('Y-m-d') }}</div>
-            <div>{{ serie.overview | nl2br }}</div>
-            <section class="seasons">
-                <h3>Seasons !</h3>
-                {% for season in serie.seasons %}
-                    <article>
-                        <img src="{{ asset('img/posters/seasons/' ~ season.poster) }}"
-                             alt="{{ serie.name }} season {{ season.number }}">
-                        <div>
-                            <h4>Season #{{ season.number }}</h4>
-                            <div>{{ season.overview }}</div>
-                        </div>
-                    </article>
-                {% endfor %}
-            </section>
-        </div>
-        {% endfor %}
+    <h2>Series List !</h2>
+    <div class="flex_div flex_between">
+        {% if currentPage > 1 %}
+            <a class="link_button" href="{{ path('serie_list', {'page': currentPage - 1}) }}">Previous Page</a>
+        {% endif %}
+        {% if currentPage < maxPage %}
+            <a class="link_button" href="{{ path('serie_list', {'page': currentPage + 1}) }}">Next Page</a>
+        {% endif %}
     </div>
+    <section class="series-list">
+        {% for serie in series %}
+            <article>
+                <a href="{{ path('serie_show', {'id': serie.id}) }}">
+                    <img src="{{ asset('img/posters/series/' ~ serie.poster) }}"
+                         alt="{{ serie.name }}"
+                         title="{{ serie.name }} | {{ serie.seasons | length }} seasons">
+                </a>
+            </article>
+        {% endfor %}
+    </section>
 {% endblock %}
 
 {% block title %}
-    {{ parent() }} | Details
+    {{ parent() }} | List
 {% endblock %}
-
-{#{% block styleCss %}#}
-{#    <style>#}
-{#        body{#}
-{#            background-image: linear-gradient(60deg, rgba(0,0,0, 0.8), rgba(0,0,0, 0.5)),#}
-{#            url("{{ asset('img/backdrops/' ~ serie.backdrop) }}");#}
-{#        }#}
-{#    </style>#}
-{#{% endblock %}#}
-
